# morph

./: .gitignore  CMakeLists.txt  MorphPlugin.jucer
.github/workflows/: build-plugin.yml  build.yml
Builds/VisualStudio2022/: Morph.sln  Morph_SharedCode.vcxproj  Morph_SharedCode.vcxproj.filters  Morph_VST3.vcxproj  Morph_VST3ManifestHelper.vcxproj  resources.rc
Companion/: Info.plist  WaterMorphCompanion.swift  WaterMorphHelper.m  ai.95ent.watermorph.helper.plist  build.sh
Companion/scripts/: postinstall  uninstall-morph.sh
CompanionWin/: installer.nsh  main.js  package.json  preload.js
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Libs/signalsmith-stretch/: signalsmith-linear
Source/: ChordDetector.cpp  ChordDetector.h  CompanionLink.cpp  CompanionLink.h  CompanionLink.mm  DropZoneComponent.cpp  DropZoneComponent.h  LibraryComponent.cpp  LibraryComponent.h  LocalDetector.cpp  LocalDetector.h  LoginComponent.cpp  LoginComponent.h  MorphEngine.cpp  MorphEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaterAPI.cpp  WaterAPI.h
